fixed helpPopup aligning

--- a/Zbang.Cloudents.Mvc4WebRole/Content/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/General.less
@@ -1273,10 +1273,11 @@ input[type="radio"] {
         cursor: pointer;
     }
     .helpPopup {
-        margin:0;
+        margin:auto;
         top: -77px;
-        left: 5px; //rtl
         width: 315px;
+        left: 0;
+        right: 0;
         &:before {
             border-color: @attentionBlue transparent transparent transparent;
             top: auto;
