--- a/Zbang.Cloudents.Mvc4WebRole/Content/GeneralRtl.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/GeneralRtl.less
@@ -194,8 +194,6 @@ input[type="radio"] {
 }
 .couponWpr.couponWpr { //for more specificity
     .helpPopup {
-        right: 5px ; //rtl
-        left: auto;
         &:before {
             right: 20px; //rtl
             left: auto;
